--- a/sigproc-sp.bib
+++ b/sigproc-sp.bib
@@ -1,19 +1,24 @@
 @misc{ NAT,
+	author = "Wikipedia",
  	howpublished = "\url{http://en.wikipedia.org/wiki/NAT_traversal}",
 }
 @misc{ QOS,
+	author = "Wikipedia",
  	howpublished = "\url{http://en.wikipedia.org/wiki/Voice_over_IP#Quality_of_service}",
 }
 
 @misc{ PROBLEMS,
+	author = "Wikipedia",
  	howpublished = "\url{http://computer.howstuffworks.com/ip-telephony5.htm}",
 }
 
 @misc{ OBAMA,
+	author = "Wikipedia",
  	howpublished = "\url{http://geeknizer.com/hack-any-cisco-voip-phone/}",
 }
 
 @misc{ RAS,
+	author = "Wikipedia",
  	howpublished = "\url{https://en.wikipedia.org/wiki/Registration,_Admission_and_Status}",
 }
 
@@ -22,28 +27,33 @@
 }
 
 @misc{ H323,
+	author = "Wikipedia",
  	howpublished = "\url{https://en.wikipedia.org/wiki/H.323}",
 }
 
 @misc{ STUN,
+	author = "Wikipedia",
  	howpublished = "\url{https://en.wikipedia.org/wiki/STUN}",
 }
 
 @misc{ EKIGA,
+	author = "Wikipedia",
  	howpublished = "\url{http://wiki.ekiga.org/index.php/Manual#H.323_addresses}",
 }
 
 @misc{ NAT-FIREWALL,
+	author = "Wikipedia",
  	howpublished = "\url{http://wiki.ekiga.org/index.php/Understanding_NAT/firewall_issues_with_SIP_clients_(eg_ekiga)}",
 }
 
 @misc{ CISCO,
+	author = "Wikipedia",
  	howpublished = "\url{http://webcache.googleusercontent.com/search?q=cache:ZvS3tmAMEvcJ:docwiki.cisco.com/wiki/Cisco_IOS_Voice_Troubleshooting_and_Monitoring_--_H.323-Related_Standards&client=iceweasel-a&hl=en&strip=1}",
 }
 
 
 @ARTICLE{ ORIG,
-	AUTHOR = "Irwin, David; Dadej, Arek; Slay, Jill; Shore, Malcolm",
+	AUTHOR = "Irwin David\; Dadej Arek; Slay Jill; Shore Malcolm",
     TITLE = "Extraction of Electronic Evidence from VoIP: Forensic Analysis of a Virtual Hard Disk vs RAM",
 	year = 2012,
 	journal = "The Journal of Digital Forensics, Security and Law"
